[package]
name = "solana-gossip"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_matches = "1.5.0"
bincode = "1.3.3"
bs58 = { version = "0.5.1", default-features = false }
bv = "0.11.1"
clap = "2.33.1"
crossbeam-channel = "0.5.13"
flate2 = "1.0.31"
indexmap = "2.6.0"
itertools = "0.12.1"
log = "0.4.22"
lru = "0.7.7"
num_cpus = "1.16.0"
num-traits = "0.2"
rand = "0.8.5"
rand0-7 = { package = "rand", version = "0.7" }
rand_chacha = "0.3.1"
rand_chacha0-2 = { package = "rand_chacha", version = "0.2.2" }
rayon = "1.10.0"
serde = "1.0.215" # must match the serde_derive version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_bytes = "0.11.15"
serde_derive = "1.0.215" #
serial_test = "2.0.0"
solana-bloom = { version = "2" }
solana-clap-utils = { version = "2" }
solana-client = { version = "2" }
solana-connection-cache = { version = "2" }
solana-entry = { version = "2" }
solana-feature-set = { version = "2" }
solana-frozen-abi = { version = "2", features = [
    "frozen-abi",
] }
solana-frozen-abi-macro = { version = "2", features = [
    "frozen-abi",
] }
solana-ledger = { version = "2" }
solana-logger = { version = "2" }
solana-measure = { version = "2" }
solana-metrics = { version = "2" }
solana-net-utils = { version = "2" }
solana-perf = { version = "2" }
solana-rayon-threadlimit = { version = "2" }
solana-rpc-client = { version = "2" }
solana-runtime = { version = "2" }
solana-sanitize = { version = "2" }
solana-sdk = { version = "2" }
solana-serde-varint = { version = "2" }
solana-short-vec = { version = "2" }
solana-streamer = { version = "2" }
solana-tpu-client = { version = "2" }
solana-version = { version = "2" }
solana-vote = { version = "2" }
solana-vote-program = { version = "2" }
static_assertions = "1.1.0"
test-case = "3.3.1"
thiserror = "2.0.3"

[features]
frozen-abi = [
    # "dep:solana-frozen-abi",
    # "dep:solana-frozen-abi-macro",
    # "esolana-bloom/frozen-abi",
    # "solana-ledger/frozen-abi",
    # "solana-perf/frozen-abi",
    # "solana-runtime/frozen-abi",
    # "solana-sdk/frozen-abi",
    # "solana-short-vec/frozen-abi",
    # "solana-version/frozen-abi",
    # "solana-vote/frozen-abi",
    # "solana-vote-program/frozen-abi",
]

[[bin]]
name = "solana-gossip"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# [lints]
# workspace = true
