[package]
name = "basket-gossip"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-gossip = {workspace = true}
solana-sdk = "2.1.0"
solana-net-utils = "2.1.0"
solana-streamer = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
thiserror = "1.0"
solana-version = "2.1.0"
indexmap = "2.6.0"
lru = "0.12.5"
solana-logger = "2.1.0"